--- a/ruta_vuelo.html
+++ b/ruta_vuelo.html
@@ -9,7 +9,7 @@
 <body>
 
 <nav class="bg-blue-600 border-gray-200 dark:bg-gray-900">
-  <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
+  <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4 shadow-lg">
     <a href="https://www.sena.edu.co" class="flex items-center space-x-3 rtl:space-x-reverse">
         <img src="style/logoSena.png" class="h-10" alt="Flowbite Logo" />
         <span class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white">SENA-AirLines</span>
@@ -26,7 +26,7 @@
     <div class="hidden w-full md:block md:w-auto" id="navbar-default">
       <ul class="font-medium flex flex-col p-4 md:p-0 mt-4 border border-gray-100 rounded-lg bg-gray-50 md:flex-row md:space-x-8 rtl:space-x-reverse md:mt-0 md:border-0 md:bg-blue-700 dark:bg-gray-800 md:dark:bg-gray-900 dark:border-gray-700">
         <li>
-          <a href="#" class="block py-2 px-3 text-gray-900 rounded-sm hover:bg-white-100 md:hover:bg-transparent md:border-0 md:hover:text-red-50 md:p-0 dark:text-white md:dark:hover:text-blue-600 dark:hover:bg-blue-600 dark:hover:text-white md:dark:hover:bg-transparent bg-blue-600 font-bold">Regresar al menú</a>
+          <a href="#" class="block py-2 px-3 text-gray-900 rounded-sm hover:bg-white-100 md:hover:bg-transparent md:border-0 md:hover:text-red-50 md:p-0 dark:text-white md:dark:hover:text-blue-600 dark:hover:bg-blue-600 dark:hover:text-white md:dark:hover:bg-transparent bg-transparent font-bold">Menú principal</a>
         </li>
       </ul>
     </div>
@@ -34,17 +34,25 @@
 </nav>
 
 
-<div id="login" class="w-64 h-80 bg-indigo-50 rounded shadow flex flex-col justify-between p-3 justify-center ml-155 mt-40">       
+<div id="login" class="w-64 h-80 bg-indigo-50 rounded shadow flex flex-col justify-between p-3 justify-center ml-140 mt-30">       
     <form class="text-indigo-500">
         <fieldset class="border-4 border-dotted border-indigo-500 p-5">
             <legend class="px-2 italic -mx-2">Ingresa tu ruta!</legend>
+            <label class="text-xs font-bold after:text-red-400" for="email">Tipo de vuelo:</label>     
+            <div class="mb-5">
+            <select type="search" id="base-input" name="tipo_ruta" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" required>
+                <option value="">Escoge tipo de vuelo</option>
+                <option value="0"> Ida </option>
+                <option value="1"> Ida y vuelta</option>
+            </select>
+            </div>
              <label class="text-xs font-bold after:text-red-400" for="email">Ciudad origen:</label>     
             <div class="mb-5">
-            <input type="search" id="base-input" name="origen" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" placeholder="Ej: Bogotá D.C">
+            <input type="search" id="base-input" name="origen" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500 opacity-80" placeholder="Ej: Bogotá D.C" required>
             </div>   
             <label class="text-xs font-bold after:text-red-400" for="password">Ciudad destino:</label>
             <div class="mb-5">
-            <input type="search" id="base-input" name="destino" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" placeholder="Ej: Medellín, Antioquia">
+            <input type="search" id="base-input" name="destino" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-100 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500 opacity-80" placeholder="Ej: Medellín, Antioquia" required>
             </div> 
             <button type="submit" class="w-full rounded bg-indigo-500 text-indigo-50 p-2 text-center font-bold hover:bg-indigo-400">Buscar Vuelo 🔎</button>
         </fieldset>
