se creo la vista de pago con su respectivo formulario, y se va a empezar con el diseño de los datos del comprador al hacer la reserva

--- a/ruta_vuelo.html
+++ b/ruta_vuelo.html
@@ -53,7 +53,11 @@
             <label class="text-xs font-bold after:text-red-400" for="password">Ciudad destino:</label>
             <div class="mb-5">
             <input type="search" id="base-input" name="destino" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-100 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500 opacity-80" placeholder="Ej: Medellín, Antioquia" required>
-            </div> 
+            </div>
+            <label class="text-xs font-bold after:text-red-400" for="password">Fecha:</label> 
+            <div class="mb-5">
+            <input type="date" id="fecha" name="destino" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-100 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500 opacity-80" placeholder="Ej: Medellín, Antioquia" required>
+            </div>
             <button type="submit" class="w-full rounded bg-indigo-500 text-indigo-50 p-2 text-center font-bold hover:bg-indigo-400">Buscar Vuelo 🔎</button>
         </fieldset>
          </form>
