--- a/ruta_vuelo.html
+++ b/ruta_vuelo.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Escoge la ruta de Vuelo!</title>
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
 
@@ -23,7 +24,7 @@
 
     
 
-    <div class="hidden w-full md:block md:w-auto" id="navbar-default">
+    <div class="max-w-sm max-w-md max-w-lg hidden w-full md:block md:w-auto" id="navbar-default">
       <ul class="font-medium flex flex-col p-4 md:p-0 mt-4 border border-gray-100 rounded-lg bg-gray-50 md:flex-row md:space-x-8 rtl:space-x-reverse md:mt-0 md:border-0 md:bg-blue-700 dark:bg-gray-800 md:dark:bg-gray-900 dark:border-gray-700">
         <li>
           <a href="#" class="block py-2 px-3 text-gray-900 rounded-sm hover:bg-white-100 md:hover:bg-transparent md:border-0 md:hover:text-red-50 md:p-0 dark:text-white md:dark:hover:text-blue-600 dark:hover:bg-blue-600 dark:hover:text-white md:dark:hover:bg-transparent bg-transparent font-bold">Menú principal</a>
