--- a/reservas.html
+++ b/reservas.html
@@ -1,62 +1,58 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Reserva tu asiento</title>
-    <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>SENA-AirLines - Reserva tu asiento</title>
+  <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
 </head>
-<body>
-    <nav class="bg-blue-700 border-gray-200 dark:bg-gray-900">
-  <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
-    <a href="https://www.sena.edu.co" class="flex items-center space-x-3 rtl:space-x-reverse">
-        <img src="style/logoSena.png" class="h-8" alt="Flowbite Logo" />
-        <span class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white">SENA-AirLines</span>
-    </a>
-    <span class="self-center text-l font-xs whitespace-nowrap dark:text-white">Estamos para servirte</span>
-    <button data-collapse-toggle="navbar-default" type="button" class="inline-flex items-center p-2 w-10 h-10 justify-center text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600" aria-controls="navbar-default" aria-expanded="false">
-        <span class="sr-only">Open main menu</span>
-        <svg class="w-5 h-5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 17 14">
-            <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 1h15M1 7h15M1 13h15"/>
-        </svg>
-    </button>
+<body class="bg-gray-100">
 
-    
+  <!-- Navbar -->
+  <nav class="bg-blue-700 border-gray-200 dark:bg-gray-900">
+    <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
+      <a href="https://www.sena.edu.co" class="flex items-center space-x-3 rtl:space-x-reverse">
+        <img src="style/logoSena.png" class="h-8" alt="Logo SENA" />
+        <span class="self-center text-2xl font-semibold text-white">SENA-AirLines</span>
+      </a>
+      <span class="self-center text-l text-white">Estamos para servirte</span>
+    </div>
+  </nav>
 
-    <div class="hidden w-full md:block md:w-auto" id="navbar-default">
-      <ul class="font-medium flex flex-col p-4 md:p-0 mt-4 border border-gray-100 rounded-lg bg-gray-50 md:flex-row md:space-x-8 rtl:space-x-reverse md:mt-0 md:border-0 md:bg-blue-700 dark:bg-gray-800 md:dark:bg-gray-900 dark:border-gray-700">
-        <li>
-          <span class="block py-2 px-3 text-gray-900 rounded-sm hover:bg-white-100 md:hover:bg-transparent md:border-0 md:hover:text-red-50 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">Agenda tu vuelo</span>
-        </li>
-      </ul>
+  <h2 class="text-center text-2xl font-semibold my-6">Selecciona tu asiento ✈️</h2>
+
+  <div class="max-w-3xl mx-auto bg-white p-6 rounded-2xl shadow-md">
+
+    <div class="grid grid-cols-5 gap-4 justify-items-center">
+
+      <template id="fila-asientos">
+        <div class="seat bg-green-500 hover:bg-green-600 text-white font-bold rounded-lg flex items-center justify-center w-12 h-12 cursor-pointer">A1</div>
+      </template>
+      <script>
+        const container = document.currentScript.parentElement;
+        let seatNum = 1;
+        for (let fila = 1; fila <= 15; fila++) {
+          for (let col = 1; col <= 5; col++) {
+            if (col === 3) {
+              const pasillo = document.createElement('div');
+              pasillo.className = "w-6";
+              container.appendChild(pasillo);
+            } else {
+              const asiento = document.createElement('div');
+              asiento.className = "w-12 h-12 bg-green-500 hover:bg-green-600 text-white font-bold rounded-lg flex items-center justify-center cursor-pointer transition";
+              asiento.textContent = seatNum;
+              asiento.onclick = () => alert(`Asiento seleccionado: ${seatNum}`);
+              container.appendChild(asiento);
+              seatNum++;
+            }
+          }
+        }
+      </script>
+
     </div>
   </div>
-</nav>
 
-<p class="text-center ">Estos son los asientos disponibles para tu vuelo</p>
-
-<div id="miDiv" class="w-20 h-20 rounded-lg bg-red-600" onclick="submitForm()"">
-    <form id="miForm" action="" method="post">
-        <input type="hidden" name="num_asiento" required>
-        <button type="submit" id="miBoton" class="absolute"></button>
-    </form>
-</div>
-
-<script>
-    const miDiv = document.getElementById('miDiv');
-    const miBoton = document.getElementById('miBoton');
-
-    miBoton.addEventListener('click', () => {
-      miDiv.click(); // Simula un clic en el div
-    });
-
-    function submitForm(event) {
-        if (event) event.stopPropagation();
-        document.getElementById('miForm').submit();
-        
-    }
-  </script>
+  <p class="text-center mt-6 text-gray-500">Haz clic en un asiento para seleccionarlo.</p>
 
 </body>
 </html>
-
