--- a/pago.html
+++ b/pago.html
@@ -1,120 +1,39 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Realiza tu pago</title>
-    <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+  <meta charset="UTF-8"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Realiza tu pago</title>
+  <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
 </head>
-<body>
-    <div class="p-4">
+<body class="bg-gray-100">
+  <div class="p-4">
     <div class="max-w-xl mx-auto bg-white">
       <div class="rounded-xl shadow-sm border border-gray-200 overflow-hidden">
         <div class="bg-gradient-to-r from-gray-500 to-gray-600 p-6">
           <h2 class="text-xl font-semibold text-white">Completa tu pago</h2>
-          <p class="text-sm text-slate-100 mt-2">Rapido y seguro</p>
+          <p class="text-sm text-slate-100 mt-2">Rápido y seguro</p>
         </div>
 
         <div class="p-6">
-          <div class="flex mb-6 border border-gray-300 rounded-md overflow-hidden">
-            <button
+          <!-- Botones de selección -->
+          <div id="paymentButtons" class="flex mb-6 border border-gray-300 rounded-md overflow-hidden">
+            <button data-type="credito"
               class="cursor-pointer flex-1 py-3 px-1 text-sm text-center bg-indigo-50 text-indigo-600 font-medium">
-              Tarjeta Credito
+              Tarjeta Crédito
             </button>
-            <button
+            <button data-type="debito"
               class="cursor-pointer flex-1 py-3 px-1 text-sm text-center text-slate-500 hover:bg-gray-50 font-medium">
-              Tarjeta Debito
+              Tarjeta Débito
             </button>
-            <button
+            <button data-type="pse"
               class="cursor-pointer flex-1 py-3 px-1 text-sm text-center text-slate-500 hover:bg-gray-50 font-medium">
               PSE
             </button>
           </div>
 
-          <form>
-            <div class="mb-4">
-              <label class="block text-slate-900 text-sm font-medium mb-2" for="cardName">
-                Nombre del propietario
-              </label>
-              <input
-                type="text"
-                id="cardName"
-                name="propietario"
-                class="px-4 py-2.5 bg-white border border-gray-400 text-slate-900 w-full text-sm rounded-md focus:outline-indigo-600"
-                placeholder="John Smith"
-                required
-              />
-            </div>
-            <div class="mb-4">
-              <label class="block text-slate-900 text-sm font-medium mb-2" for="cardNumber">
-                Número de tarjeta
-              </label>
-              <div class="relative">
-                <input
-                  type="text"
-                  id="cardNumber"
-                  name="numeroTarjeta"
-                  class="px-4 py-2.5 bg-white border border-gray-400 text-slate-900 w-full text-sm rounded-md focus:outline-indigo-600"
-                  placeholder="1234 5678 9012 3456"
-                  required
-                />
-              </div>
-            </div>
-            <div class="grid grid-cols-2 gap-4 mb-6">
-              <div>
-                <label class="block text-slate-900 text-sm font-medium mb-2" for="expDate">
-                  Fecha de expiración
-                </label>
-                <input
-                  type="text"
-                  id="expDate"
-                  name="expiracion"
-                  class="px-4 py-2.5 bg-white border border-gray-400 text-slate-900 w-full text-sm rounded-md focus:outline-indigo-600"
-                  placeholder="MM/YY"
-                  required
-                />
-              </div>
-              <div>
-                <label class="block text-slate-900 text-sm font-medium mb-2" for="cvv">
-                  CVV
-                </label>
-                <input
-                  type="text"
-                  id="cvv"
-                  name="cvv"
-                  class="px-4 py-2.5 bg-white border border-gray-400 text-slate-900 w-full text-sm rounded-md focus:outline-indigo-600"
-                  placeholder="123"
-                  required
-                />
-              </div>
-            </div>
-
-            <div class="mb-6">
-              <div class="flex items-center">
-                <input
-                  type="checkbox"
-                  id="saveCard"
-                  class="h-4 w-4 text-indigo-600 focus:ring-indigo-500 border-gray-300 rounded"
-                  required
-                />
-                <label for="saveCard" class="ml-2 block text-sm text-slate-900 font-medium">
-                 Yo acepto los <a href="#" class="text-indigo-600 hover:text-indigo-500">Terminos y condiciones</a>
-                </label>
-              </div>
-            </div>
-
-            <div class="flex flex-col space-y-4">
-              <button
-                type="submit"
-                class="cursor-pointer w-full py-2.5 px-4 rounded-md flex items-center justify-center bg-indigo-600 hover:bg-indigo-700 text-sm text-white font-medium transition-colors"
-              >
-                Realizar Pago
-              </button>
-              <div class="flex items-center justify-center text-slate-500 text-sm">
-                <span>Pagos seguros</span>
-              </div>
-            </div>
-          </form>
+          <!-- Contenedor del formulario dinámico -->
+          <div id="paymentFormContainer"></div>
         </div>
       </div>
     </div>
@@ -124,6 +43,100 @@
       <img src="https://readymadeui.com/images/american-express.webp" class="w-12" alt="card2" />
       <img src="https://readymadeui.com/images/master.webp" class="w-12" alt="card3" />
     </div>
-</div>
+  </div>
+
+  <script>
+    const formContainer = document.getElementById('paymentFormContainer');
+    const buttons = document.querySelectorAll('#paymentButtons button');
+
+    // Plantillas de formularios según tipo de pago
+    const forms = {
+      credito: `
+        <form>
+          <div class="mb-4">
+            <label class="block text-slate-900 text-sm font-medium mb-2">Nombre del propietario</label>
+            <input type="text" class="px-4 py-2.5 bg-white border border-gray-400 text-slate-900 w-full text-sm rounded-md focus:outline-indigo-600" placeholder="John Smith" required />
+          </div>
+          <div class="mb-4">
+            <label class="block text-slate-900 text-sm font-medium mb-2">Número de tarjeta</label>
+            <input type="number" class="px-4 py-2.5 bg-white border border-gray-400 text-slate-900 w-full text-sm rounded-md focus:outline-indigo-600" placeholder="1234 5678 9012 3456" required />
+          </div>
+          <div class="grid grid-cols-2 gap-4 mb-6">
+            <div>
+              <label class="block text-slate-900 text-sm font-medium mb-2">Fecha de expiración</label>
+              <input type="number" class="px-4 py-2.5 bg-white border border-gray-400 w-full text-sm rounded-md focus:outline-indigo-600" placeholder="MM/YY" required />
+            </div>
+            <div>
+              <label class="block text-slate-900 text-sm font-medium mb-2">CVV</label>
+              <input type="number" class="px-4 py-2.5 bg-white border border-gray-400 w-full text-sm rounded-md focus:outline-indigo-600" placeholder="123" min="100" max="999" required />
+            </div>
+          </div>
+          <div class="mb-6">
+            <div class="flex items-center">
+              <input type="checkbox" id="saveCard" class="h-4 w-4 text-indigo-600 focus:ring-indigo-500 border-gray-300 rounded" required />
+              <label for="saveCard" class="ml-2 text-sm text-slate-900 font-medium">Acepto los <a href="#" class="text-indigo-600 hover:text-indigo-500">Términos y condiciones</a></label>
+            </div>
+          </div>
+          <button type="submit" class="w-full py-2.5 px-4 bg-indigo-600 hover:bg-indigo-700 text-white font-medium rounded-md transition">Realizar Pago</button>
+        </form>
+      `,
+      debito: `
+        <form>
+          <div class="mb-4">
+            <label class="block text-slate-900 text-sm font-medium mb-2">Banco</label>
+            <select class="px-4 py-2.5 bg-white border border-gray-400 w-full text-sm rounded-md focus:outline-indigo-600" required>
+              <option value="">Selecciona tu banco</option>
+              <option>Bancolombia</option>
+              <option>Davivienda</option>
+              <option>BBVA</option>
+            </select>
+          </div>
+          <div class="mb-4">
+            <label class="block text-slate-900 text-sm font-medium mb-2">Número de cuenta</label>
+            <input type="text" class="px-4 py-2.5 bg-white border border-gray-400 w-full text-sm rounded-md focus:outline-indigo-600" placeholder="000-123456-7" required />
+            <div class="flex items-center">
+              <input type="checkbox" id="saveCard" class="h-4 w-4 text-indigo-600 focus:ring-indigo-500 border-gray-300 rounded" required />
+              <label for="saveCard" class="ml-2 text-sm text-slate-900 font-medium">Acepto los <a href="#" class="text-indigo-600 hover:text-indigo-500">Términos y condiciones</a></label>
+            </div>
+            </div>
+          <button type="submit" class="w-full py-2.5 px-4 bg-indigo-600 hover:bg-indigo-700 text-white font-medium rounded-md transition">Pagar con Débito</button>
+        </form>
+      `,
+      pse: `
+        <form>
+          <div class="mb-4">
+            <label class="block text-slate-900 text-sm font-medium mb-2">Selecciona tu banco</label>
+            <select class="px-4 py-2.5 bg-white border border-gray-400 w-full text-sm rounded-md focus:outline-indigo-600" required>
+              <option value="">Selecciona...</option>
+              <option>Bancolombia</option>
+              <option>Davivienda</option>
+              <option>Banco de Bogotá</option>
+            </select>
+          </div>
+          <div class="mb-4">
+            <label class="block text-slate-900 text-sm font-medium mb-2">Correo asociado</label>
+            <input type="email" class="px-4 py-2.5 bg-white border border-gray-400 w-full text-sm rounded-md focus:outline-indigo-600" placeholder="correo@ejemplo.com" required />
+            <div class="flex items-center">
+              <input type="checkbox" id="saveCard" class="h-4 w-4 text-indigo-600 focus:ring-indigo-500 border-gray-300 rounded" required />
+              <label for="saveCard" class="ml-2 text-sm text-slate-900 font-medium">Acepto los <a href="#" class="text-indigo-600 hover:text-indigo-500">Términos y condiciones</a></label>
+            </div>
+            </div>
+          <button type="submit" class="w-full py-2.5 px-4 bg-indigo-600 hover:bg-indigo-700 text-white font-medium rounded-md transition">Pagar con PSE</button>
+        </form>
+      `
+    };
+
+    // Mostrar el formulario de crédito por defecto
+    formContainer.innerHTML = forms.credito;
+
+    // Cambiar formulario al hacer clic en los botones
+    buttons.forEach(btn => {
+      btn.addEventListener('click', () => {
+        buttons.forEach(b => b.classList.remove('bg-indigo-50', 'text-indigo-600'));
+        btn.classList.add('bg-indigo-50', 'text-indigo-600');
+        formContainer.innerHTML = forms[btn.dataset.type];
+      });
+    });
+  </script>
 </body>
 </html>
