--- a/reservas.html
+++ b/reservas.html
@@ -50,7 +50,7 @@
           form.action = "";
 
           const input = document.createElement('input');
-          input.type = "text";
+          input.type = "hidden";
           input.name = "num_asiento";
           input.value = numActual;
 
